assignment/candidate.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: candidate-app
spec:
  selector:
    matchLabels:
      app: candidate-app
  replicas: 1
  template:
    metadata:
      labels:
        app: candidate-app
    spec:
      containers:
      - name: candidate
        image: vinsdocker/k8s-dice-candidate
        ports:
        - containerPort: 8080  
        startupProbe:
          httpGet:
            path: /health
            port: 8080
          periodSeconds: 1
          failureThreshold: 30  
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
          periodSeconds: 5
          failureThreshold: 3                
        resources:
          requests:
            cpu: 1000m
            memory: 2000Mi
          limits:
            cpu: 2000m
            memory: 4000Mi  
---
apiVersion: v1
kind: Service
metadata:
  name: candidate-service
spec:
  selector:
    app: candidate-app
  ports:
  - port: 8080
    targetPort: 8080
