assignment/job.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: job-app
spec:
  selector:
    matchLabels:
      app: job-app
  replicas: 1
  template:
    metadata:
      labels:
        app: job-app
    spec:
      containers:
      - name: job
        image: vinsdocker/k8s-dice-job
        ports:
        - containerPort: 8080  
        startupProbe:
          httpGet:
            path: /health
            port: 8080
          periodSeconds: 1
          failureThreshold: 30  
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
          periodSeconds: 5
          failureThreshold: 3                
        resources:
          requests:
            cpu: 1000m
            memory: 200Mi
          limits:
            cpu: 2000m
            memory: 4000Mi  
---
apiVersion: v1
kind: Service
metadata:
  name: job-service
spec:
  selector:
    app: job-app
  ports:
  - port: 8080
    targetPort: 8080
